# ethlambda

./: Cargo.toml  Dockerfile  Makefile  README.md
.github/workflows/: ci.yml  docker_publish.yaml
crates/blockchain/: Cargo.toml
crates/blockchain/src/: key_manager.rs  lib.rs  metrics.rs  store.rs
crates/blockchain/state_transition/: Cargo.toml
crates/blockchain/state_transition/src/: justified_slots_ops.rs  lib.rs  metrics.rs
crates/blockchain/state_transition/tests/: stf_spectests.rs  types.rs
crates/blockchain/tests/: forkchoice_spectests.rs  signature_spectests.rs  signature_types.rs  types.rs
crates/common/types/: Cargo.toml
crates/common/types/src/: attestation.rs  block.rs  genesis.rs  lib.rs  primitives.rs  state.rs
crates/net/p2p/: Cargo.toml
crates/net/p2p/src/: gossipsub.rs  lib.rs
crates/net/p2p/src/messages/: mod.rs  status.rs
crates/net/p2p/test_data/: signed_block_with_attestation.ssz
crates/net/rpc/: Cargo.toml
crates/net/rpc/src/: lib.rs  metrics.rs
crates/storage/src/: lib.rs
docs/: 3sf_mini.md  metrics.md
metrics/: README.md
metrics/grafana/dashboards/: client-interop-dashboard.json
metrics/prometheus/: prometheus.yml
