[package]
name = "ethlambda-blockchain"
authors.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[features]
# To skip signature verification during tests
skip-signature-verification = []

[dependencies]
ethlambda-storage.workspace = true
ethlambda-state-transition.workspace = true
ethlambda-fork-choice.workspace = true
ethlambda-types.workspace = true

spawned-concurrency.workspace = true

thiserror.workspace = true
tracing.workspace = true

prometheus.workspace = true

[dev-dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
hex = { workspace = true }
datatest-stable = "0.3.3"

[[test]]
name = "forkchoice_spectests"
path = "tests/forkchoice_spectests.rs"
harness = false
required-features = ["skip-signature-verification"]
