[package]
name = "ethlambda-types"
authors.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
thiserror.workspace = true
serde.workspace = true
hex.workspace = true
ethereum-types.workspace = true

leansig.workspace = true

ethereum_ssz_derive = "0.10.0"
ethereum_ssz = "0.10.0"
ssz_types = "0.14.0"
tree_hash = "0.12.0"
tree_hash_derive = "0.12.0"
