[package]
name = "ethlambda-rpc"
authors.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
axum = "0.8.1"
tokio.workspace = true
ethlambda-metrics.workspace = true
tracing.workspace = true
ethlambda-storage.workspace = true
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
ethlambda-types.workspace = true
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
